modify endpoint '/update_password' to use uid instead of username.
